--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: newdevops
+  name: devopstask04-service
 spec:
   selector:
-    app: newdevops
+    app: devopstask04
   ports:
     - protocol: TCP
       port: 80
